fixed issue where deleting note caused duplicate sticky ids. increased center's z-index

--- a/public/css/compass.less
+++ b/public/css/compass.less
@@ -83,6 +83,7 @@
     background:@dark;
     color:@light;
     text-align:center;
+    z-index:2;
 
     p {
         width:90%;
